Fix HW06 Optional 2 (part 3)
Refactor logic of roles adding in extractResults()